VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc10Down.err
[8MB/455.1MB][  1%][>                                                 ][2MB/s]  [16MB/455.1MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.1MB][  5%][==>                                               ][3.429MB/s]  [32MB/455.1MB][  7%][===>                                              ][4MB/s]  [40MB/455.1MB][  8%][====>                                             ][4MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][4MB/s]  [56MB/455.1MB][ 12%][======>                                           ][4MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][4MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][4MB/s]  [80MB/455.1MB][ 17%][========>                                         ][4MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][4MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][3.84MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][3.714MB/s]  [112MB/455.1MB][ 24%][============>                                     ][3.733MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][3.636MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][3.657MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][3.579MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][3.6MB/s]  [152MB/455.1MB][ 33%][================>                                 ][3.619MB/s]  [160MB/455.1MB][ 35%][=================>                                ][3.636MB/s]  [168MB/455.1MB][ 36%][==================>                               ][3.652MB/s]  [176MB/455.1MB][ 38%][===================>                              ][3.667MB/s]  [184MB/455.1MB][ 40%][====================>                             ][3.755MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][3.765MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][3.846MB/s]  [208MB/455.1MB][ 45%][======================>                           ][3.852MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][3.927MB/s]  [224MB/455.1MB][ 49%][========================>                         ][3.93MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][3.932MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][4MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][4MB/s]  [256MB/455.1MB][ 56%][============================>                     ][4.063MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][4.062MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][4.06MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][4.118MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][4.114MB/s]  [296MB/455.1MB][ 65%][================================>                 ][4.111MB/s]  [304MB/455.1MB][ 66%][=================================>                ][4.164MB/s]  [312MB/455.1MB][ 68%][==================================>               ][4.16MB/s]  [320MB/455.1MB][ 70%][===================================>              ][4.156MB/s]  [328MB/455.1MB][ 72%][====================================>             ][4.152MB/s]  [336MB/455.1MB][ 73%][====================================>             ][4.148MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][4.145MB/s]  [352MB/455.1MB][ 77%][======================================>           ][4.141MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][4.138MB/s]  [368MB/455.1MB][ 80%][========================================>         ][4.135MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][4.132MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][4.129MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][4.126MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][4.124MB/s]  [408MB/455.1MB][ 89%][============================================>     ][4.121MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][4.119MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][4.117MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][4.114MB/s]  [440MB/455.1MB][ 96%][================================================> ][4.112MB/s]  [448MB/455.1MB][ 98%][=================================================>][4.073MB/s]  [455.1MB/455.1MB][100%][==================================================][4.063MB/s]  [455.1MB/455.1MB][100%][==================================================][4.063MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_59609/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_59609/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
